--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <h1>Home Page</h1>
     <p>I am Ali From Local Repo</p>
     <p>I am Nawal Zaki From Remote Repo</p>
+    <img src="" width="100px" height="100px" alt="text">
     <h1>Welcome</h1>
 </body>
 </html>
